// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList ButtonList should render correctly 1`] = `
<Styled(View)>
  <FlatList
    data={
      Array [
        Object {
          "button": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={2}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Styled(View)>
`;

exports[`ButtonList ButtonList should render correctly 2`] = `
<Styled(View)>
  <FlatList
    data={
      Array [
        Object {
          "button": Object {
            "target": "_blank",
            "text": "GIRL",
            "title": "GIRL",
            "url": "/c/girls-clothing",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "BOY",
            "title": "BOY",
            "url": "https://test6.childrensplace.com/us/c/baby-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "TODDLER BOY",
            "title": "TODDLER BOY",
            "url": "https://test6.childrensplace.com/us/c/toddler-boy-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
        Object {
          "button": Object {
            "target": "_blank",
            "text": "TODDLER GIRL",
            "title": "TODDLER GIRL",
            "url": "https://test6.childrensplace.com/us/c/toddler-girl-clothes",
          },
          "image": Object {
            "alt": "Girl",
            "crop_d": "",
            "crop_m": "",
            "crop_t": "",
            "title": "Girl",
            "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
          },
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Styled(View)>
`;
